kubernetes/homepage/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: homepage
  labels:
    app: homepage

spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: calfur-dev
        app: homepage
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: homepage
          image: ghcr.io/calfur/homepage:a5c25013ec48398c6db7880895bad65c945c4cb0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
              ephemeral-storage: 64Mi
            limits:
              cpu: "1"
              memory: 768Mi
              ephemeral-storage: 1Gi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: next-cache
              mountPath: /app/.next/cache
          ports:
            - name: web
              containerPort: 3000
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 128Mi
        - name: next-cache
          emptyDir:
            sizeLimit: 512Mi
