kubernetes/homepage/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calfur.dev`)
      kind: Rule
      services:
        - name: homepage
          port: 80
  tls:
    certResolver: myresolver
